--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                         
                                         <ul>
                                                 <li>Página inicial <span class='price-right'>R$498</span></li>
-                                                <li>Pg extras (opcional) <span class='price-right'>+R$98/cada</span</li>
+                                                <li>Pg extras <span class='price-right'>+R$98/cada</span</li>
                                                 <li>Hospedagem <span class='price-right'>R$28/mês</span></li>
                                                 <li>Acesso ilimitado</li>
                                                 <li>Área de configuração</li>
