--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>CodeBurger - Empresa especializada em criação de sites para pequena empresas em Sorocaba - SP e região.</title>
     
     <!-- LOAD JQUERY LIBRARY -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
     
     <!-- Loading Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -881,7 +881,7 @@
         </a>
 
     <!-- Load JS here for greater good =============================-->
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <!--script src="js/jquery-1.11.3.min.js"></script-->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/jquery.nav.js"></script>
