--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="criar site, sites, ecommerce, design, sorocaba, sao paulo, campinas, sp, mg, ouro preto, minas gerais, fazer site, profissional, micro empresas">
     <meta name="description" content="Empresa especializada na criação de site para pequena e médias empresas em sorocaba SP e região.">
-
+    <meta name="google-site-verification" content="Wxo2Bfo_jZfVF9mXmuSdkc2Y0zkCundtV40oupFtrpE" />
     <title>CodeBurger - Empresa especializada em criação de sites para pequena empresas em Sorocaba - SP e região.</title>
     
     <!-- LOAD JQUERY LIBRARY -->
