mudança preço e tamanho do texto de preços

--- a/index.html
+++ b/index.html
@@ -383,12 +383,13 @@
                                     <div class="pricing-bottom">
                                         
                                         <ul>
-                                                <li>Página inicial <span class='price-right'>R$498</span></li>
-                                                <li>Pg extras <span class='price-right'>+R$98/cada</span</li>
-                                                <li>Hospedagem <span class='price-right'>R$28/mês</span></li>
+                                                <li>Página inicial <span class='price-right'>R$398</span></li>
+                                                <li>Pg extras <span class='price-right'>+R$98/cada</span></li>
+                                                <li>Contato por e-mail <span class='price-right'>+R$98</span></li>
+                                                <li>Botão whatsapp <span class='price-right'>+R$98</span></li>
+                                                <li>Área de Administração<span class='price-right'>+R$98</span></li>
+                                                <li>Hospedagem Google <span class='price-right'>R$28/mês</span></li>
                                                 <li>Acesso ilimitado</li>
-                                                <li>Área de configuração</li>
-                                                <li>Servidores alta performace</li>
                                         </ul>
                                         
                                         <a href="" class="btn btn-md btn-block btn-pricing-green">Quero este produto</a>
@@ -560,7 +561,7 @@
 
                                     <img src="images/icons/icon2.png" alt="" class="width-100">
 
-                                    <p class="process-description">Receba um protótipo <br /> identico de como ficaria seu site.</p>
+                                    <p class="process-description">Receba um protótipo de <br /> alta fidelidade de como ficaria seu site.</p>
 
                                 </div>
 
@@ -612,7 +613,7 @@
 
                                     <img src="images/icons/icon3a.png" alt="" class="width-100">
 
-                                    <p class="process-description">Apos acertado,receba em até 2 semanas seu site pronto e online.</p>
+                                    <p class="process-description">Após acertado receba seu site pronto e online.</p>
 
                                 </div>
 
