Analitcs e deletado arquivos html inuteis

--- a/index.html
+++ b/index.html
@@ -880,6 +880,15 @@
     <a href="https://bit.ly/2MKnfOZ" target="_blank" class="float" >
         <i class="fab fa-whatsapp fa-3x my-float"></i>
         </a>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121948592-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121948592-4');
+</script>
 
     <!-- Load JS here for greater good =============================-->
     <!--script src="js/jquery-1.11.3.min.js"></script-->
