numero do contato

--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                     <p class="contact_info"><i class="icon icon-pin-map"></i> Sorocaba, SP.
                     <p class="contact_info"><i class="icon icon-email-envelope"></i> <a href="mailto:#">daniel@codeburger.com.br</a></p>
                     
-                    <p class="contact_info"><i class="icon icon-call-phone"></i> 15 </p>
+                    <p class="contact_info"><i class="icon icon-call-phone"></i> 15 9 8117-1396 </p>
                 
                 </div>
                 <!--end col-md-3 -->
