--- a/index.html
+++ b/index.html
@@ -877,9 +877,9 @@
                 
     </div>
     <!--end footer -->
-    <a href="https://bit.ly/2MKnfOZ" target="_blank" class="float" >
-        <i class="fab fa-whatsapp fa-3x my-float"></i>
-        </a>
+    <a href="https://bit.ly/2MKnfOZ" target="_blank" class="wpp" >
+        <img src='https://cdn.icon-icons.com/icons2/840/PNG/512/Whatsapp_icon-icons.com_66931.png'/>
+    </a>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121948592-4"></script>
 <script>
