nova imagem de sistema

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                             <!--begin popup image -->
                             <div class="popup-wrapper">
                                 <div class="popup-gallery">
-                                    <a class="popup1" href="/images/FACE-Mockup.jpg"><img src="/images/FACE-Mockup.jpg" class="width-100" alt="pic"><span class="eye-wrapper2"><i class="icon icon-cursor-move eye-icon" style="font-size: 38px;"></i></span></a>
+                                    <a class="popup1" href="/images/telasistema.png"><img src="/images/telasistema.png" class="width-100" alt="pic"><span class="eye-wrapper2"><i class="icon icon-cursor-move eye-icon" style="font-size: 38px;"></i></span></a>
                                 </div>
                             </div>
                             <!--end popup image -->
