--- a/index.html
+++ b/index.html
@@ -407,7 +407,8 @@
                             <!--begin popup image -->
                             <div class="popup-wrapper">
                                 <div class="popup-gallery">
-                                    <a class="popup1" href="/images/telaSistema.png"><img src="/images/telaSistema.png" class="width-100" alt="pic"><span class="eye-wrapper2"><i class="icon icon-cursor-move eye-icon" style="font-size: 38px;"></i></span></a>
+                                    <a class="popup1" href="/images/telaSistema.png">
+                                        <img src="/images/telaSistema.png" class="width-100" alt="pic"><span class="eye-wrapper2"><i class="icon icon-cursor-move eye-icon" style="font-size: 38px;"></i></span></a>
                                 </div>
                             </div>
                             <!--end popup image -->
